2009-01-22  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  Point to the right docs.

	* TODO:
	  More tinking.

	* style.css:
	  Remove one commented out item.

2009-01-21  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.in:
	* gtkdoc-fixxref.in:
	* style.css:
	  Match css of highlight with source-highlight. Handle line numbering by
	  our-selfs. Still stupid browsers copy '#' chars for each line number.

2009-01-21  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Try to xref first word in 'normal' span.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* gtkdoc-mkdb.in:
	* tests/gobject/src/gobject.c:
	  We could add the language as a comment, it is not shown in the final output.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtkdoc-fixxref.in:
	  Really fix double extension of entities.

	* style.css:
	  Fix link color of xrefs symbols.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-fixxref.in:
	  Indent.

	* gtkdoc-mkdb.in:
	  Fix end of string handling.

	* style.css:
	  Use one tango colors one more time.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* tests/annotations/docs/Makefile.am:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	  Detect namespace prefix if not given.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* style-classic.css:
	* style.css:
	  Fix gap, caused by double index divs produces by index generated with
	  the docbook stylesheets.

2009-01-20  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More ideas.

	* gtk-doc.xsl:
	  Make sure indexdiv and glossarydiv elements have anchors.

	* style-classic.css:
	* style.css:
	  Fix spacing for navbar in index/glossary pages.

	* tests/annotations/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Cleanup samples.

2009-01-19  Stefan Kost  <ensonic@users.sf.net>

	* TODO: